# coastline-recommender

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.docs  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  recommendations.csv
.github/workflows/: ci.yml  docs-deploy.yml  release.yml
config/: README.md  batch_config.yaml
config/coastline_functionality/: README.md  config.yaml  default.yaml  experiment.yaml  infrastructure.yaml  sample_trace.csv  sample_workloads.csv
config/user_playground/: README.md  demo.yaml
dev/ado_plugin/: README.md  pyproject.toml
dev/ado_plugin/ado_coastline/: __init__.py  _bridge.py  recommender_experiment.py
dev/ado_plugin/ado_coastline/test/: test_recommender_experiment.py
dev/ado_plugin/examples/: min_gpu.yaml  simple.yaml
dev/ado_plugin/examples/sweep/: operation.yaml  space.yaml
dev/benchmark/: README.md  kavier_calibration.py  main.py  metrics.py  recommendation_quality.py  run_benchmark.py  run_energy_comparison.py  run_recommendation_timing.py  run_timing_study.py
dev/benchmark/tests/: test_kavier_calibration.py  test_metrics.py  test_recommendation_quality.py  test_run_benchmark_units.py
dev/trainer/: __init__.py  build_6model_curated.py  common.py  evaluate_all.py  generic_trainer.py  main.py  model_specs.py  train_all.py  train_performance_bayesian_ridge.py  train_performance_catboost.py  train_performance_deep_learning.py  train_performance_gaussian_process.py  train_performance_knn.py  train_performance_lightgbm.py  train_performance_random_forest.py  train_performance_svr.py  train_performance_tabpfn.py  train_performance_xgboost.py
dev/trainer/tests/: conftest.py  test_artifact_contract.py  test_main_dispatch.py  test_pipeline_and_save.py  test_split_and_features.py  test_target_transforms.py
docker/recommender/: Dockerfile  README.md  REQUIRED_DATASET.csv  entrypoint.sh  train.sh
docs/: 3_experiment.md  4_recommendation_policies.md  5_simulation_models.md  6_feasibility_checker.md  6_specifications.md  7_terminology.md  CODE_QUALITY.md  architecture.md  contributing.md  docs.md  getting-started.md  index.md  usage.py  workloads.csv
docs-new/: mkdocs.yml
docs-new/docs/: contributing.md  index.md
docs-new/docs/concepts/: how-it-works.md  predictors.md  strategies.md
docs-new/docs/getting-started/: features.md  first-recommendation.md  installation.md
docs-new/docs/guides/: batch.md  dashboard.md  traces.md  tune.md  workload.md
docs-new/docs/reference/: cli.md  configuration.md  sdk.md
docs/assets/: extra.css  mathjax.js
docs/components/: energy.md  feasibility.md  library.md  performance.md  pipeline.md  policies.md
docs/guides/: cli.md  getting-started.md  installation.md
docs/overview/: concepts.md
models/: performance_svr_featv3.pkl  performance_tabpfn_featv3_6models.pkl
models/coastline-bundled/: performance_bayesian_ridge_featv3.pkl  performance_catboost_featv3.pkl  performance_deep_learning_featv3  performance_lightgbm_featv3.pkl  performance_xgboost_featv3.pkl  random_forest.pkl
models/custom/: tabpfn.pkl
src/coastline/: __init__.py
src/coastline/cli/: __init__.py  __main__.py  _args.py  _shared.py  enrich_trace.py  interactive.py  main.py  plot_trace.py  recommend.py  recommend_job.py  recommend_trace.py  run.py  trace_to_runs.py  tune.py  utils.py
src/coastline/cli/_repl/: __init__.py  prompts.py  render.py  theme.py
src/coastline/sdk/: __init__.py  constants.py  exceptions.py  logging.py
src/coastline/sdk/io/: __init__.py  default_experiment.yaml  infrastructure.py  options_loader.py  run_config.py  sample_data.py  schema.py
src/coastline/sdk/io/adapters/: __init__.py  base.py  coastline.py  ibm_trace.py
src/coastline/sdk/io/data/: default_lookup.csv  (+1 more)
src/coastline/sdk/models/: __init__.py  aliases.py  context.py  recommendation.py  validation.py  workload.py
src/coastline/sdk/pipeline/: feasibility.py  grid.py  selection.py  workflow.py
src/coastline/sdk/policies/: __init__.py  base.py  min_gpu.py  multi_objective.py
src/coastline/sdk/predictors/: base.py  factory.py
src/coastline/sdk/recommend/: __init__.py  _goals.py  batch_api.py  batch_csv.py  engine.py  facade.py
src/coastline/sdk/trace/: __init__.py  enrich.py  plot.py  recommend.py  to_runs.py
src/coastline/ui/: __init__.py  __main__.py  app.py  prediction_worker.py  workload_queue.py
src/coastline/ui/templates/: index.html
tests/: conftest.py
tests/test_cli/: test_interactive.py  test_packaging.py
tests/test_io/: test_adapters.py  test_dual_output_artifacts.py  test_html_visualizer.py  test_json_output.py  test_odc_runner.py  test_options_loader.py  test_run_config.py
tests/test_models/: test_models.py  test_validation.py
tests/test_pipeline/: test_cluster_awareness.py  test_integration.py  test_nan_candidate_isolation.py  test_pipeline_units.py  test_unified_workflow.py
tests/test_policies/: test_config_predictor_selection.py  test_multi_objective_weights.py  test_policy_factory_config.py  test_recommender_policies.py  test_strategies.py
tests/test_predictors/: test_autoconf_feasibility.py  test_cache_similarity.py  test_composite_predictor.py  test_dl_predictor.py  test_energy_predictors.py  test_energy_scoring.py  test_kavier_multinode.py  test_kavier_predictor.py  test_ml_common.py  test_ml_predictors.py  test_opendc_calibration.py  test_opendc_energy.py  test_predictor_factory.py  test_retrieval_units.py  test_sklearn_portfolio_metadata.py  test_throughput_fallback.py
tests/test_recommend/: test_batch.py  test_engine_seam.py  test_facade.py  test_goal_vocabulary.py  test_kavier_public_api_guard.py  test_recommend_api.py  test_runtime_self_sufficiency.py  test_unified_vocabulary.py  test_usage_example.py
tests/test_trace/: test_plot_timeline.py  test_trace_enrich.py  test_trace_integration.py  test_trace_recommend.py  test_trace_to_runs.py
tests/test_tune/: test_tune_validation.py  test_tune_xgboost_roundtrip.py
tests/test_ui/: test_service.py  test_webapp.py  test_workload_queue_metadata.py
(+40 files in other folders)
